// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip > should override alignment styles with position styles 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with align bottom, when passed "bottom" for the align prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  top: 50%;
  top: calc(50% - (16px + 4px));
  left: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with align center, when passed "center" for the align prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with align left, when passed "left" for the align prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with align right, when passed "right" for the align prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with align top, when passed "top" for the align prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  bottom: 50%;
  bottom: calc(50% - (16px + 4px));
  left: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with position bottom, when passed "bottom" for the position prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  top: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with position left, when passed "left" for the position prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with position right, when passed "right" for the position prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  left: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;

exports[`Tooltip > should render with position top, when passed "top" for the position prop 1`] = `
.circuit-0 {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: inline-block;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 360px;
  background-color: var(--cui-bg-elevated);
  border-radius: var(--cui-border-radius-byte);
  border: var(--cui-border-width-kilo) solid var(--cui-border-subtle);
  box-shadow: 0 2px 6px 0 rgb(0 0 0 / 8%);
  padding: var(--cui-spacings-byte) var(--cui-spacings-kilo);
  position: absolute;
  z-index: var(--cui-z-index-tooltip);
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  bottom: calc(100% + 4px);
}

<div>
  <div
    class="circuit-0"
  >
    Tooltip content
  </div>
</div>
`;
